<?xml version="1.0"?>
<package format="2">
  <name>ego_planner</name>
  <version>1.3.0</version>
  <description>
    An ESDF-free Gradient-based Local Planner for Quadrotors
  </description>
  <author email="iszhouxin@zju.edu.cn">iszhouxin</author>
  <maintainer email="hyx020222@gmail.com">Eason Hua</maintainer>
  <license>Apache</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <build_depend>message_runtime</build_depend>
  <build_depend>plan_env</build_depend>
  <build_depend>path_searching</build_depend>
  <build_depend>bspline_opt</build_depend>
  <build_depend>traj_utils</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>plan_env</exec_depend>
  <exec_depend>path_searching</exec_depend>
  <exec_depend>bspline_opt</exec_depend>
  <exec_depend>traj_utils</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
